# thermoflow

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml  publish-docs.yml  python-build.yml  python-publish.yml
docs/: conf.py  free_energy.rst  index.rst  time_series.rst  work.rst
examples/: fenergy_errors.py
thermoflow/: __init__.py  about.py  config.py  config_test.py  fenergy.py  fenergy_test.py  free_energy.py  free_energy_test.py  time_series.py  time_series_test.py  utils.py  utils_test.py  work.py  work_test.py
