


[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]


[project]
name = "thermoflow"
dynamic = ["version"]
dependencies = [
    "jax",
    "jaxopt",
]
requires-python =">=3.12"

authors = [
  {name = "Gavin E. Crooks", email = "gec@threeplusone.com"},
]
description = "Python package for thermodynamic calculations"
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/gecrooks/thermoflow/"
Documentation = "https://gecrooks.github.io/thermoflow/"
Repository = "https://github.com/gecrooks/thermoflow.git"
Issues = "https://github.com/gecrooks/thermoflow/issues"

[project.optional-dependencies]
dev = [
    "setuptools_scm",
    "pytest",
    "pytest-cov",
    "mypy",
    "sphinx",
    "guzzle_sphinx_theme",
    "ruff",
    "pre-commit",
    "pymbar", # Used in testing
]

docs = [
  "sphinx",
  "guzzle_sphinx_theme",
  ]

[tool.setuptools]
packages = ["thermoflow"]


[tool.setuptools_scm]
fallback_version = "0.0.0.dev"


[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Don't complaine about unused imports in __init__.py
"__init__.py" = ["F401", "F403"]


# pytest configuration
# https://docs.pytest.org/en/7.2.x/reference/customize.html

[tool.pytest.ini_options]
testpaths = "thermoflow"



[tool.coverage.run]
branch = true
source = ["thermoflow"]
parallel = true

[tool.coverage.report]
omit = ['*_test.py']
exclude_lines = [
  '\#\s*pragma: no cover',
  '^\s*raise AssertionError\b',
  '^\s*raise NotImplementedError\b',
  '^\s*return NotImplemented\b',
  '^\s*raise$',
  '^assert False\b',
  '''^if __name__ == ['"]__main__['"]:$''',
]


# mypy typecheck configuration
# https://mypy.readthedocs.io/en/stable/config_file.html

[tool.mypy]
files = 'thermoflow'

# Suppresses error about unresolved imports
ignore_missing_imports = true

# Disallows functions without type annotations
disallow_untyped_defs = true


